syntax = "proto3";

import "keys.proto";

message Invite {
  bytes inviteId = 1;
  bytes projectInviteId = 2;
  string projectName = 3;
  optional string roleName = 4;
  optional string roleDescription = 5;
  string invitorName = 6;
}

message InviteCancel {
  bytes inviteId = 1;
}

message InviteResponse {
  enum Decision {
    REJECT = 0;
    ACCEPT = 1;
    ALREADY = 2;
  }
  bytes inviteId = 1;
  Decision decision = 2;
}

message ProjectJoinDetails {
  bytes inviteId = 1;
  bytes projectKey = 2;
  EncryptionKeys encryptionKeys = 3;
}

message DeviceInfo {
  enum DeviceType {
    mobile = 0;
    tablet = 1;
    desktop = 2;
  }
  string name = 1;
  optional DeviceType deviceType = 2;
}
